--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -62,7 +62,8 @@
 						<p>&#x1F3B5 Jen is a skeptical technologist and aspiring protagonist. Devoted daughter/wife/parent/friend. Volunteers in her neighborhood and sings in two choirs</p>
 						<p>&#x1F47D Stephen practices the dark arts (cybersecurity) by day and dad jokes by night. His son pretends he’s funny, his cats are not amused. His lol is the reason the library asked us to book a study room for our meetings</p>
 						<p>&#x1F337 Lisa is reinventing herself as a librarian after many years in the technology industry. In her spare time…well, she has no spare time between her library job and library school. She would like to be cooking, taking walks, and reading more</p>
-						<p>&#x1F300 John collects rare books and has read many of the classic texts (and we mean classic…i.e. the <i>Iliad</i> and the <i>Odyssey</i>) that we haven’t managed to read in our club yet. We may get to Mary Beard’s <i>SPQR</i></p>.
+						<p>&#x1F300 John collects rare books and has read many of the classic texts (and we mean classic…i.e. the <i>Iliad</i> and the <i>Odyssey</i>) that we haven’t managed to read in our club yet. We may try to tackle Mary Beard’s <i>SPQR</i></p>.
+						<p>&#x1F331 Other members were too busy or shy to provide blurbs...make one yours!</p>
 					<!--Learn more section-->
 						<h3 id="learnmore">Learn more</h3>
 						<p>There are several ways to learn more about us. 
