--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -56,7 +56,7 @@
 						<p>Come and be part of our next chapter!</p>	
 					<!--Members-->
 						<h2 id="members">Members</h2>
-						<p>&#x1F436 Jan loved the club so much that when she retired from university teaching out-of-state, she moved back to Illinois and came to meetings again. Really dislikes Emma Bovary</p>
+						<p>&#x1F436 Jan loved the club so much that when she retired from university teaching out-of-state, she moved back to Illinois and came to meetings again. Stops for dogs. Asks probing questions. Really dislikes Emma Bovary</p>
 						<p>&#x1F30E Mary travels the world (you’ll be hard-pressed to name a country she hasn’t or isn’t planning to visit) with her family while consulting for non-profits and baking cookies…will never live down forgetting the holiday cookies</p>
 						<p>&#x1f431 Joe isn’t sure what he’s gotten himself into. When he retired from teaching, his partner made him join a group. Wants to read more books…finds it easier to listen to audiobooks while walking. When he has something to say, it’s pithy and funny</p>
 						<p>&#x1F3B5 Jen is a skeptical technologist and aspiring protagonist. Devoted daughter/wife/parent/friend. Volunteers in her neighborhood and sings in two choirs</p>
