--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -63,12 +63,21 @@
 						<p>Czech immigrant Josef Kavalier arrives in Brooklyn in 1939 to stay with his aunt’s family, and sparks are immediately struck between “Joe” (a talented draftsman) and his cousin Sammy Klayman, a hustling go-getter (and hopeful “serious writer”) who dreams of success in the burgeoning new field of newspaper comic strips. The pair dream up, and draw the exploits of, such superheroes as “the Escapist” (a figure resembling “Houdini, but mixed with Robin Hood and a little bit of Albert Schweitzer,” whose sources are revealed in extensive flashbacks that also detail Joe’s training as a magician and escape artist)—and “Kavalier & Clay” become rich and famous. But the shadow of Hitler, and later the pressure of change and political accusation, overtake these two magnificently imagined characters.  The story climaxes unforgettably—and surprisingly—atop the Empire State Building, and its lengthy dénouement (a virtuoso piece of sustained storytelling) ends in a gratifying resolution of the deceptions and disappearances that have become second nature (as well as heavy burdens) to Joe, and a simultaneous “unmasking” and liberation that release Sammy from the storybook world they had made together.</p>
 						<p><span class="tab"></span>--<a href="https://https://www.kirkusreviews.com/book-reviews/michael-chabon/the-amazing-adventures-of-kavalier-and-clay/" target="_blank">Kirkus Reviews</a></p>
 					<!--The third book content-->
-						<h3 id="lessons">Lessons in Chemistry (Bonnie Garmus, 2022)</h3>
+						<div class="container">
+    						<figure class="LessonsDustJacket">
+								<img alt="Dust jacket image for Lessons in Chemistry, cartoon female scientist face on orange background." src="images/LessonsInChemistry.png">
+							</figure>
+   							<div class="text-content">
+        						<h3>Beautiful Landscape</h3>
+        						<p>This is an example of using an HTML container to manage text and images together.The container uses CSS Flexbox to keep the layout responsive and visually appealing.</p>
+				    		</div>
+						</div>
+						<!--<h3 id="lessons">Lessons in Chemistry (Bonnie Garmus, 2022)</h3>
 						<figure class="LessonsDustJacket">
 							<img alt="Dust jacket image for Lessons in Chemistry, cartoon female scientist face on orange background." src="images/LessonsInChemistry.png">
 						</figure>
 						<p>At the dawn of the 1960s, Elizabeth Zott finds herself in an unexpected position. She's the star of a television program called Supper at Six that has taken American housewives by storm, but it's certainly not what the crass station head envisions: “ 'Meaningful?' Phil snapped. 'What are you? Amish? As for nutritious: no. You’re killing the show before it even gets started.’” Elizabeth is a chemist, recently forced to leave the lab where she was doing important research due to an out-of-wedlock pregnancy. Now she's reduced to explaining things like when to put the steak in the pan. If ever a woman was capable of running her own life, it's Elizabeth. But because it's the 1950s, then the '60s, men have their sweaty paws all over both her successes and failures. On the plus side, there's Calvin Evans, world-famous chemist, love of her life, and father of her child; also Walter Pine, her friend who works in television; and a journalist who at least tries to do the right thing. This is the kind of book that has a long-buried secret at a corrupt orphanage with a mysterious benefactor as well as an extremely intelligent dog named Six-Thirty. Garmus' energetic debut also features an invigorating subplot about rowing.</p>
-						<p><span class="tab"></span>--<a href="https://www.kirkusreviews.com/book-reviews/bonnie-garmus/lessons-chemistry/" target="_blank">Kirkus Reviews</a></p>
+						<p><span class="tab"></span>--<a href="https://www.kirkusreviews.com/book-reviews/bonnie-garmus/lessons-chemistry/" target="_blank">Kirkus Reviews</a></p>-->
 					<!--Other books content-->
 						<h4 id="otherbooks">Other books we've loved</h4>
 						<p>Here are some more reading highlights (by no means exhaustive) to give you an idea of our "vibe"</p>
