--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -50,11 +50,15 @@
 				<!--<p>-->
 					<!--The first book content-->
 						<h1 id="circe">Circe (Madeline Miller, 2018)</h1>
-						<figure class="CirceDustJacket">
+						<div class="container">
+							<div class="text-content">
+								<p>“Monsters are a boon for gods. Imagine all the prayers.” So says Circe, a sly, petulant, and finally commanding voice that narrates the entirety of Miller’s dazzling second novel. The writer returns to Homer, the wellspring that led her to an Orange Prize for The Song of Achilles (2012). This time, she dips into The Odyssey for the legend of Circe, a nymph who turns Odysseus’ crew of men into pigs. Readers will relish following the puzzle of this unpromising daughter of the sun god Helios. It takes banishment to the island Aeaea for Circe to sense her calling as a sorceress: “I stepped into those woods and my life began.” This lonely, scorned figure learns herbs and potions, surrounds herself with lions, and, in a heart-stopping chapter, outwits the monster Scylla to propel Daedalus and his boat to safety. She makes lovers of Hermes and then two mortal men. Circe’s fascination with mortals becomes the book’s marrow and delivers its thrilling ending. All the while, the supernatural sits intriguingly alongside “the tonic of ordinary things.”</p>
+						        <p><span class="tab"></span>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
+							</div>
+							<figure class="CirceDustJacket">
 								<img alt="Dust jacket image for Circe, stylized Greek female face in gold and black." src="images/CirceIMG.png">
-						</figure>
-						<p>“Monsters are a boon for gods. Imagine all the prayers.” So says Circe, a sly, petulant, and finally commanding voice that narrates the entirety of Miller’s dazzling second novel. The writer returns to Homer, the wellspring that led her to an Orange Prize for The Song of Achilles (2012). This time, she dips into The Odyssey for the legend of Circe, a nymph who turns Odysseus’ crew of men into pigs. Readers will relish following the puzzle of this unpromising daughter of the sun god Helios. It takes banishment to the island Aeaea for Circe to sense her calling as a sorceress: “I stepped into those woods and my life began.” This lonely, scorned figure learns herbs and potions, surrounds herself with lions, and, in a heart-stopping chapter, outwits the monster Scylla to propel Daedalus and his boat to safety. She makes lovers of Hermes and then two mortal men. Circe’s fascination with mortals becomes the book’s marrow and delivers its thrilling ending. All the while, the supernatural sits intriguingly alongside “the tonic of ordinary things.”</p>
-						<p><span class="tab"></span>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
+							</figure>
+						</div>
 					<!--The second book content-->
 						<h2 id="kavandclay">The Amazing Adventures of Kavalier and Clay (Michael Chabon, 2000)</h2>
 						<figure class="KavClayDustJacket">
@@ -73,11 +77,6 @@
 									<img alt="Dust jacket image for Lessons in Chemistry, cartoon female scientist face on orange background." src="images/LessonsInChemistry.png">
 							</figure>
 						</div>
-						<!--<figure class="LessonsDustJacket">
-							<img alt="Dust jacket image for Lessons in Chemistry, cartoon female scientist face on orange background." src="images/LessonsInChemistry.png">
-						</figure>
-						<p>At the dawn of the 1960s, Elizabeth Zott finds herself in an unexpected position. She's the star of a television program called Supper at Six that has taken American housewives by storm, but it's certainly not what the crass station head envisions: “ 'Meaningful?' Phil snapped. 'What are you? Amish? As for nutritious: no. You’re killing the show before it even gets started.’” Elizabeth is a chemist, recently forced to leave the lab where she was doing important research due to an out-of-wedlock pregnancy. Now she's reduced to explaining things like when to put the steak in the pan. If ever a woman was capable of running her own life, it's Elizabeth. But because it's the 1950s, then the '60s, men have their sweaty paws all over both her successes and failures. On the plus side, there's Calvin Evans, world-famous chemist, love of her life, and father of her child; also Walter Pine, her friend who works in television; and a journalist who at least tries to do the right thing. This is the kind of book that has a long-buried secret at a corrupt orphanage with a mysterious benefactor as well as an extremely intelligent dog named Six-Thirty. Garmus' energetic debut also features an invigorating subplot about rowing.</p>
-						<p><span class="tab"></span>--<a href="https://www.kirkusreviews.com/book-reviews/bonnie-garmus/lessons-chemistry/" target="_blank">Kirkus Reviews</a></p>-->
 					<!--Other books content-->
 						<h4 id="otherbooks">Other books we've loved</h4>
 						<p>Here are some more reading highlights (by no means exhaustive) to give you an idea of our "vibe"</p>
