--- a/obocpage.html
+++ b/obocpage.html
@@ -84,9 +84,8 @@
 				</ul>
 			</nav>
 			<p><span style="color: blue;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
-			<p><i>Hello Beautiful dust jacket image</i> is a screenshot of an image from <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
-			<p><i>Hello Beautiful book description</i> is from Kirkus Reviews <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
-			<p><i>Little Women film poster</i> is a screenshot of an image from <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
+			<p><i>Hello Beautiful dust jacket image</i> is a screenshot of an image from <a href="https://www.amazon.com/" target="_blank">Amazon.com</a></p>
+			<p><i>Hello Beautiful book description</i> is from <a href="https://www.kirkusreviews.com/" target="_blank">Kirkus Reviews</a></p>
 			<p><i>Introduction paragraph & Little Women novel synopsis text</i> written with the help of OpenAI's ChatGPT <a href="https://chatgpt.com/" target="_blank">chatgpt.com</a></p>
 		</footer>
 	</body>
