--- a/finalproject.html
+++ b/finalproject.html
@@ -41,9 +41,9 @@
 							</li>
 						</ul>
 					</nav>
-					<figure class="header-catandbooks">
+					<!--<figure class="header-catandbooks">
 						<img alt="Cartoon drawing of a content cat sitting on a shelf of books." src="images/catandbooksdrawing.jpg">
-					</figure>
+					</figure>-->
 					<p>Welcome to the Whippoorwill Book Club, a welcoming community of readers who enjoy thoughtful conversation and the shared experience of great books. We meet once a month to explore literary fiction—from contemporary award-winners to timeless classics—with an occasional nonfiction title that sparks curiosity and discussion.</p>
 				</header>
     		</article>
