--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -83,7 +83,7 @@
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a></li>
 				</ul>
 			</nav>
-			<p><span style="color: blue;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
+			<p><span style="color: #008B8B;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
 			<p><i>Cat sleeping on a pile of books</i>, Image by (Hovee, Nate) via iStock (Asset ID: 1271623554), Editorial use only</p>
 			<p><i>Cat Sitting on a Stack of Books</i>, Image by (Nilov, Mikhail) via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
 			<p><i>Map image</i> courtesy of Friends of the Palo Alto Library (FOPAL), from <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
