--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -77,6 +77,7 @@
 			<nav>
 				<ul> <!--can add classes here later-->
 					<li><a href="#aboutuspage-title" alt="go to the top of the page">Home</a></li>
+					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC main page</a></li>
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a></li>
 				</ul>
 			</nav>
