--- a/obocpage.html
+++ b/obocpage.html
@@ -83,7 +83,7 @@
 					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
 				</ul>
 			</nav>
-			<p><span style="color: blue;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
+			<p><span style="color: #008B8B;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
 			<p><i>Hello Beautiful dust jacket image</i> is a screenshot of an image from <a href="https://www.amazon.com/" target="_blank">Amazon.com</a></p>
 			<p><i>Hello Beautiful book description</i> is from <a href="https://www.kirkusreviews.com/" target="_blank">Kirkus Reviews</a></p>
 			<p><i>Introduction paragraph & Little Women novel synopsis text</i> written with the help of OpenAI's ChatGPT <a href="https://chatgpt.com/" target="_blank">chatgpt.com</a></p>
