--- a/finalproject.html
+++ b/finalproject.html
@@ -50,20 +50,24 @@
 				<article>
 					<!--What to expect section-->
 						<h1 id="Whattoexpect">What to expect</h1>
-						<p>You may have some questions about our club. Here's how we roll:</p>
-						<figure class="dogreadingbook">
-							<img alt="cartoon picture of dog with paws on an open book reading." src="images/dogreadingbook.jpg">	
-						</figure>
-						<ul>
-							<li>Monthly meetings at the library — easygoing, welcoming, and inclusive</li>
-							<li>Flexibility — attend every month or once a year</li>
-							<li>Books reserved for you ahead of time — read at your own pace</li>
-							<li>You don’t have to be an library member/cardholder to participate</li>
-							<li>You don’t have to finish the book to join the discussion</li>
-							<li>Engaging discussions about characters, themes, and perspectives</li>
-							<li>A friendly group where all voices are valued</li>
-							<li>Light refreshments — several members enjoy baking and coffee/tea provided</li>
-						</ul> 
+						<div class="container">
+							<div class="text-content">
+								<p>You may have some questions about our club. Here's how we roll:</p>
+								<ul>
+									<li>Monthly meetings at the library — easygoing, welcoming, and inclusive</li>
+									<li>Flexibility — attend every month or once a year</li>
+									<li>Books reserved for you ahead of time — read at your own pace</li>
+									<li>You don’t have to be an library member/cardholder to participate</li>
+									<li>You don’t have to finish the book to join the discussion</li>
+									<li>Engaging discussions about characters, themes, and perspectives</li>
+									<li>A friendly group where all voices are valued</li>
+									<li>Light refreshments — several members enjoy baking and coffee/tea provided</li>
+								</ul> 
+							</div>
+							<figure class="dogreadingbook">
+								<img alt="cartoon picture of dog with paws on an open book reading." src="images/dogreadingbook.jpg">	
+							</figure>
+						</div>
 					<!--Why join us section-->
 						<h2 id="whyjoinus">Why join us</h2>
 						<!--<figure class="dogreadingbook">
