--- a/finalproject.html
+++ b/finalproject.html
@@ -104,7 +104,7 @@
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a></li>
 				</ul>
 			</nav>
-			<p><span style="color: #008B8B;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
+			<p><span style="color: #00008B;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
 			<p><i>Cat sitting on a shelf of books</i>, Image by Natalie_ via iStock (ID: 905536612), <a href="https://www.istockphoto.com/help/licenses" target="_blank">Standard License</a></p>
 			<p><i>Dog reading a book</i>, AI-generated image (based on original photo cited below) using OpenAI's ChatGPT, <a href="https://chatgpt.com/" target="_blank">chatgpt.com</a></p>
 			<p><i>Dog lying on bed with book</i>, Original image by Samson Katt via Pexels (ID: 5255254), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
