--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -107,7 +107,7 @@
 					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
 				</ul>
 			</nav>
-			<p><span style="color: #008B8B;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
+			<p><span style="color: #00008B;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
 			<p><i>Book jacket images</i> are screenshots of images from <a href="https://www.amazon.com/" target="_blank">Amazon.com</a></p>
 			<p><i>Book descriptions</i> are condensed versions of <a href="https://www.kirkusreviews.com/" target="_blank">Kirkus Reviews</a> content</p>
 			<p><i>Introduction paragraph</i> written with help from OpenAI's ChatGPT <a href="https://chatgpt.com/" target="_blank">chatgpt.com</a></p>
