--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -20,7 +20,7 @@
       			<header>
 					<h1 id="aboutuspage-title">Whippoorwill Members</h1>
 					<h2 id="page-subtitle">Get To Know Us</h2>
-					<p><i><small>Posted by: LBedner</small></i></p>
+					<!--<p><i><small>Posted by: LBedner</small></i></p>not a fan of this-->
 					<nav>
 						<ul class="menu-items">
 							<li class="menu-items-opt home">
