--- a/finalproject.html
+++ b/finalproject.html
@@ -64,8 +64,11 @@
 									<li>Light refreshments — several members enjoy baking and coffee/tea provided</li>
 								</ul> 
 							</div>
-							<figure class="dogreadingbook">
+							<!--<figure class="dogreadingbook">
 								<img alt="cartoon picture of dog with paws on an open book reading." src="images/dogreadingbook.jpg">	
+							</figure>-->
+							<figure class="birdsonbranch">
+								<img alt="photo of three birds sitting on a branch." src="https://img.freepik.com/premium-photo/random-best-photo_865967-224217.jpg">	
 							</figure>
 						</div>
 					<!--Why join us section-->
