--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -42,7 +42,7 @@
 					</nav>
 					<p>Our group is friendly, relaxed, and always open to new members. Whether you love diving deep into characters and themes or simply enjoy discovering new stories with others, you’ll find a place here. Come for the books, stay for the community, and be part of engaging conversations that connect us through the joy of reading.</p>
 					<figure class="header-catandbooks">
-						<img alt="Photo of terns standing on a beach." src="images/ternsonbeach.jpg">
+						<img alt="Photo of terns standing on a beach." src="images/ternsonabeach.jpg">
 					</figure>
 					<!--<figure class="header-catandbooks">
 						<img alt="Cartoon drawing of a content cat sitting on a book shelf in soothing colors." src="images/catandbooksdrawing.jpg">
