--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -41,7 +41,7 @@
 						</ul>
 					</nav>
 					<p>Our group is friendly, relaxed, and always open to new members. Whether you love diving deep into characters and themes or simply enjoy discovering new stories with others, you’ll find a place here. Come for the books, stay for the community, and be part of engaging conversations that connect us through the joy of reading.</p>
-					<figure class="header-catandbooks">
+					<figure class="header-ternsonbeach">
 						<img alt="Photo of terns standing on a beach." src="images/ternsonabeach.jpg">
 					</figure>
 					<!--<figure class="header-catandbooks">
