--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -52,7 +52,7 @@
 				<article>
 					<!--History of the club-->
 						<h1 id="history">History</h1>
-						<p>Founded in 1999 in the cozy living room of one of its first members, the group began as a small circle of readers who loved sharing books and lively conversation. Over time, the club grew in spirit and purpose, eventually moving to a library setting to create a more welcoming, community-focused club. While it still enjoys a dedicated core membership, the group continues to look forward—inviting new readers to join, share their perspectives, and help shape the next chapter of its history.</p>
+						<p>Founded in 1999 in the cozy living room of one of its first members, the group began as a small circle of readers who loved sharing books and lively conversation. Over time, the club grew in spirit and purpose, eventually moving to a library (Indian Trails Public Library District) setting to create a more welcoming, community-focused club. While it still enjoys a dedicated core membership, the group continues to look forward—inviting new readers to join, share their perspectives, and help shape the next chapter of its history.</p>
 						<p>Come and be part of our next chapter!</p>	
 					<!--Members-->
 						<h2 id="members">Members</h2>
