--- a/finalproject.html
+++ b/finalproject.html
@@ -54,7 +54,7 @@
 							<div class="text-content">
 								<p>You may have some questions about our club. Here's how we roll:</p>
 								<ul>
-									<li>Monthly meetings at the library — easygoing, welcoming, and inclusive</li>
+									<li>Monthly meetings at the Indian Trails library — easygoing, welcoming, and inclusive</li>
 									<li>Flexibility — attend every month or once a year</li>
 									<li>Books reserved for you ahead of time — read at your own pace</li>
 									<li>You don’t have to be an library member/cardholder to participate</li>
